--- a/.github/workflows/run-smoke-tests.yml
+++ b/.github/workflows/run-smoke-tests.yml
@@ -1,23 +1,25 @@
-name: run-tests
+name: run-smoke-tests
 
 on: [push, pull_request]
 
 jobs:
-  test:
+  test-smoke:
 
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x]
 
     steps:
+    - uses: supercharge/mongodb-github-action@1.6.0
+      with:
+        mongodb-version: 4.4
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install --frozen-lockfile
-    - run: yarn build
-    - run: yarn test
+    - run: yarn test:smoke
