--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -10,6 +10,11 @@ pygments-apiblueprint==0.2.0
 sphinx-tabs==3.2.0
 sphinx-panels==0.6.0
 myst-parser==0.15.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib.devhelp==1.0.2
+sphinxcontrib.htmlhelp==2.0.1
+sphinxcontrib.serializinghtml==1.1.5
+sphinxcontrib.qthelp==1.0.3
 
 # dev dependencies
 sphinx-autobuild==2021.3.14
